@@ -168,7 +168,7 @@ rwtestAllXml() {
       rwtestXml testTimesig3.xml
       rwtestXml testTremolo.xml
       rwtestXml testTuplets.xml
-#      rwtestXmlRef testVoiceMapper1.xml
+      rwtestXmlRef testVoiceMapper1.xml
       rwtestXml testVoicePiano1.xml
       rwtestXml testVolta1.xml
       rwtestXml testWedge1.xml
